@@ -1,8 +1,12 @@
 AUX jack-rack-1.4.5-asneeded.patch 355 SHA256 ca73979ea8949ff0ed749f08c6bda8c1b953582a3bd54b1843fa8031f8694ddd SHA512 96b0122e47e87926f1193c803465d3941ae257cd348c3f816807dfdefd98310347185fb659207b98ecb9d36ae05c0bc75db7158f9769d8760caba2251b8193e4 WHIRLPOOL 03ae1ceed0b0f60708dfd1cb4a11c4fdb74c4840bdadd60a1aba4e63cb471fa7a55e8a341031c1f4370d7aa0d707e8f577b81e685889d99cffe507768fcde238
 AUX jack-rack-1.4.6-noalsa.patch 580 SHA256 633659edadfdcf0befc89e37f6b032464e0d7385abd4bf38c6a97199deaf1856 SHA512 5b066700ef863abfc3a308b6a784beedebf85f0fa9327e2c6515a82982ef8806bcbffb765a03c52bc779fa80ee5e7ac7fd276aa89743c235fff016270b775eb8 WHIRLPOOL f5fdf61379b47e47cbbb8b1123e10748024f3c42c5cd7bba4313a565a217312de6279d0f3c5263f7b333e6f8a5de82d10225f17f3256985a2d96ba5bdadcef1c
 AUX jack-rack-1.4.7-disable_deprecated.patch 432 SHA256 d0a011ccb163cc412adc64e9a6ab8a8897a64257db7fdfec0acdb1229bcadf8b SHA512 ce4f145a6589cf5a3fd5369f662ea56e2b53e2a77ceba6c91166b952c4fe5690207ea4394da3c6bf54ce52324cef9ee2e7b3258741ce3d4f58f97af7f8d55855 WHIRLPOOL faf23e440a6ada1a4e63a614accb5c56205965124b2221a9023de687bbfcf8ae83e8607f4bb5bb9842ad6a4c706f5a917c0ffddebf461f62e106f52cb88dcd7f
+AUX jack-rack-1.4.8_rc1-noxml.patch 492 SHA256 759a64cef74963c072ae303aad2737a6a3796ea8c09598fc46921ca72472b31a SHA512 79f1406003006ef0956ae08a53d9aefbeeb9ba97308217bd3c6610a854e4e905cd972e1431ea21dc3f938efd21120bf45b7dfc55993858d7c3e2304ffde3909d WHIRLPOOL 76b8a13691cd2acd1a624c81158ce4602226fe8e98528cbe3b3b2679d83749fc94133a98722d2f24fef2578471fd9ffed0d458121166e5dd83f3b49fe80ab300
 DIST jack-rack-1.4.7.tar.gz 317474 SHA256 f0e8e1e5ebe1dbc9d89d57427f1dcb65094451ce8b7c8bf56799bf5ce4b8df64 SHA512 abfcbe2b7f5de964fc6236e0f1ed1f4c47bb03d3d018fe129e1158983d3879fcc032c56c1741448f85c7de12f345ccfba3b6271b16af96db1a3e4427f9deb810 WHIRLPOOL 8a401b1f23c56f39235972cbe06f62d7c8a1ea77af51710751e053ead238605b624dba3617fb51a6c3c87da078118e8094fc0b0c323a5fb73b7b25cd87eb57ac
-EBUILD jack-rack-1.4.7-r1.ebuild 1357 SHA256 46947ee5b813979f77b90d63b5fa4dc41da670f15440708caced2defd93ec57f SHA512 75eaeeb40bdd394b4b4b988f2118fd997dc7b637371e92fb45669716b244f63d1a73824c4d5bbfba5388ebad4a38245d484b9a3878fe8a6a4fc09377a647fe48 WHIRLPOOL 99e130d36d39e8c42dc4d748a44a664e78634edd2ca4fd35f769db4d3bdd889b8424e6f0157895d159252b10946dff78c22c472fc30ba58c696ba0a1079ede25
+DIST jack-rack_1.4.8~rc1-1.debian.tar.gz 6742 SHA256 888bde7c981b83f095c891cffff6eb03d4ef3faf3a78f11a14ee49decb60e0ef SHA512 4e0503a0b1fa080bed0f9730929d820d173d886f4d4801016419d33729ec453f1f4e0f96fe102d83731169b91c54939663e9529516fdc09bca5d347be3e18715 WHIRLPOOL 4edcc9aa4195f36a0a8ff2b0a98c7920f5a4649e1a282c57102f4984e71c1560a2d6c89318796ed5e6431bff27abd87409ad00fdeeeba2f829353e7350fcdcb3
+DIST jack-rack_1.4.8~rc1.orig.tar.gz 122400 SHA256 a8a0dfb82df7c1c2c41edb021f851f15fb8f959ec2a9107f2b037c166febdb99 SHA512 8c7be402b6c8ad02a6ad7379d98c49a00bf5a3c70e5e5c174d786e77bf72592cf2eec6b346ce77d1dabb3787a6d028f4d02a1dd18daa5bf3daa297ac7bd7ad38 WHIRLPOOL 7bbe8895ce11265fc6fb8c12144d3ca41f4c073c8dc3cc2faf0d74f7561639f04d951994dc39b2b8c1c9f4e4b7ba8b42a0fc3bbfd347abd90e39fdb5d34873a9
+EBUILD jack-rack-1.4.7-r1.ebuild 1357 SHA256 dcf6161752eadb91ebeed53e0a4f9e508280f437e7e50fd57157c50afe99c092 SHA512 46c502c1bd75530efdeb33570ff6a642073cada906b1fb8e61ad3fcaad6f46aa1d3e5f742f700307a420170eb1b4225a7599a72fe57a62f17e75e3830ecd0944 WHIRLPOOL 9e13d44e39c1a6eb61d28de4e71bde560b65c903155f4aec457ee231ce90ffbfcf7948df01dfebff249fb179cbe8390fdf703a52b5d902e0a0f12bb50234964f
+EBUILD jack-rack-1.4.8_rc1.ebuild 1690 SHA256 2fbe231ee623615061a7bedf3bd05346cd8e3578f84372e6150d8c9a2e0556d4 SHA512 200db30c09ebd3dec37a98c207e924554d0ffa6c7ed7bed8131d0a29f792edb583809780dc2c91aa47f40a845d4bea73596bd3418a0ecce1913f97ddbb30ad59 WHIRLPOOL 3a0f69771dccc3c7f0c62fecc7b76b88a3fcd339ac3ab20c8c4969f2e661b45bb46b2e6bb2e3753b1f9af706c2fe62eec1e7e7d140f70bdba21faf15030e65bb
 EBUILD jack-rack-9999.ebuild 1069 SHA256 250d119be2dcc250ed1c3924f6778aa689ed3ada491aa480978765fb134a4781 SHA512 aeff562afb4820067202c208ea97fb08d22e25faf63cd82f41aff196db5ef394cae60e857bdcbcd9ea763f60a535ae0c2b9aa410231d89bae2ca0be095a6131d WHIRLPOOL 61ecb2d7f28c516fcf2c365391134dbef62d03e605bbd9ab435f14064dade2b1026ce07ffbc6c5a22ddcdc2aa46b733c3a6558f060afa9cd0a76f301475e9f53
-MISC ChangeLog 265 SHA256 af2fbb20a6d55f8775af877d9a52f469517c4fa528f71170289924305668bef2 SHA512 17e84573e20a0a0e98104326e3ed31fe726150aac4a52dce43dbf5ceb4cee7a1ff087c78fd931435bb38e345f512f22905fb05c2b2404bd3211bdd0521eb8291 WHIRLPOOL 80c0de4f46e084d4e86522f24b042c9401e5286ce989e77ffa5febf68d818db3513270d43b46ad972a41fa3172ad542be37ade5d88c7836a7688b0f167b94498
+MISC ChangeLog 557 SHA256 2391b0f7196eb88ad5ca514587db34230d551a95e273f9b97d77ca0275690913 SHA512 fa97b4262b01a990adfa9917212e5e2eacb57d093d66541770c3d8806e8f834bca1ec9265f4280a9eefe4b96c14d0233e52fc2e292bbb7bda9cee2fa5a682d62 WHIRLPOOL 53dfbce5af033df62d8e84a9e3a3cb9f15ab22d1266b0b296b2f5e83991f9ec512a140b6ea589948c49943fa8dadfe4152ec6e453d7eaf6af8c1f113189188fd
 MISC metadata.xml 247 SHA256 a7865de51dec20abfda27865f687cc4cdae4625000920d3fca0825a7dd9919fc SHA512 f506b8fea7233402f8f9527e507b24f7bff4439c0bdd382ee4ebab6848b8d53fb7e7e702ebd2da7e63e263127c024bb89dde62638c3239e9733dc2474a349aa8 WHIRLPOOL 7867147a50940132ae8329346afd8cb38cb7f5eeaf62430b52db7979fb63da1648110a13a7fd2ddeb339b20de8eebaf22c9edf17e9138aadfb393712e417265f
