@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  27 Dec 2012; Karl Lindén (lilrc) <lilrc@users.sourceforge.net>
+  +jack-rack-1.4.8_rc1.ebuild:
+  Added new version, ebuild tidy up
+
   13 Dec 2012; Karl Lindén (lilrc) <lilrc@users.sourceforge.net>
   +jack-rack-9999.ebuild, jack-rack-1.4.7-r1:
   added live ebuild
